# project_setup_c-

./: CMakeLists.txt  README.md
src/: main.cpp  math_func.cpp  math_func.hpp
tests/: tests.cpp
